@@ -13,6 +13,8 @@
 #   Calamares is Free Software: see the License-Identifier above.
 #
 
+import os
+import shutil
 import libcalamares
 from libcalamares.utils import check_target_env_call
 
@@ -35,6 +37,19 @@ def run_dracut():
     :return:
     """
     kernelName = libcalamares.job.configuration['kernelName']
+    zfs = libcalamares.globalstorage.value("zfsDatasets")
+    root_mount_point = libcalamares.globalstorage.value("rootMountPoint")
+
+    if zfs:
+        hostid_source = '/etc/hostid'
+        hostid_destination = '{!s}/etc/hostid'.format(root_mount_point)
+
+        # copy hostid before kernel image creation with zfs
+        if os.path.exists(hostid_source):
+            try:
+                shutil.copy2(hostid_source, hostid_destination)
+            except Exception as e:
+                libcalamares.utils.warning("Could not copy hostid")
 
     if not kernelName:
         return check_target_env_call(['dracut', '-f'])
